# deep-learning-specialization-coursera

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
nn_and_dl/: logistic_regression.ipynb
